--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     .container {
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: space-evenly;
         align-items: center;
 
     }
@@ -43,7 +43,7 @@
 
     #miyagi {
         align-items: flex-end; 
-        width: 60vw;
+        width: 30vw;
         
     }
     }
